fix: small fix remove overflow scroll from grid component

--- a/components/Grid/grid.module.css
+++ b/components/Grid/grid.module.css
@@ -4,9 +4,9 @@
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(auto-fill, minmax(215px, 1fr));
-  /* // grid-template-rows: repeat(auto-fill, minmax(275px, 1fr)); */
+  /* grid-template-rows: repeat(auto-fill, minmax(275px, 1fr)); */
 /* flex-wrap: wrap; */
-	overflow: scroll;
+	/* overflow: scroll; */
   width: 100%;
   height: 100%;
 }
